# bms_daemon

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build_deb.sh  package.xml
.github/workflows/: build-deb.yml
cmake/: roboto_bmsConfig.cmake.in
config/: bms_daemon.default
debian/: bms.service  bms_daemon.default  bms_ota.py  bms_ota.service  changelog  conffiles  control  copyright  postinst  prerm  rules
etc/default/: bms_daemon.default
include/: bms_driver.hpp  bms_protocol.hpp
scripts/: bms_ota.py
service/: bms_ota.service
src/: bms_daemon.cpp  bms_driver.cpp  main.cpp  protocol.cpp  pybind_module.cpp
src/drivers/: CMakeLists.txt
src/drivers/tws/: CMakeLists.txt  protocol.cpp  tws_bms_driver.cpp  tws_bms_driver.hpp
udev/: 99-bms.rules
